Adicion de oradores, como llegar, etc

--- a/como-llegar.html
+++ b/como-llegar.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./estilos/estilo.css" />
-    <title>OWASP FOUNDATION</title>
+    <title>Como llegar</title>
   </head>
   <body>
-    <div class="cont-principal">
+    <div class="cont-comollegar">
       <header class="header">
         <img class="header-logo" src="./assets/owasp-logo.jpeg" alt="" />
         <nav class="header-menu">
@@ -19,32 +18,29 @@
           </ul>
         </nav>
       </header>
-      <main class="main-evento">
-        <section class="sec-evento">
+      <main class="main-comollegar">
+        <section class="sec-comollegar">
           <article>
-            <h2>Título del evento</h2>
-            <div class="cont-evento">
+            <h2>Cómo llegar</h2>
+            <div class="cont-comollegar">
               <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Architecto quasi odit odio earum, error dolore sit nobis. Qui
-              accusantium quae neque, dolorum labore quasi autem quidem
-              distinctio molestias laudantium quas numquam dignissimos ipsam?
-              Facilis, quos nam non, possimus distinctio obcaecati eligendi
-              nobis quibusdam eveniet modi fugiat ducimus dolores deleniti
-              maxime molestias impedit magnam quaerat tenetur voluptatem.
-              Soluta, nemo modi! Doloremque perspiciatis, itaque ut officiis
-              totam voluptatibus cum ipsa, ipsam dolorum atque consequuntur
-              minima velit fugit suscipit cupiditate dignissimos illum ea in
-              quibusdam odit? Tenetur dolores aperiam, voluptatibus deleniti
-              necessitatibus libero voluptates provident dolorum, sint laborum
-              id sit dignissimos quas ab.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
+                necessitatibus, facere, atque eum dignissimos consequatur magni,
+                reiciendis eveniet tempore porro perspiciatis voluptatem
+                obcaecati totam illum quia sapiente harum ullam numquam alias
+                placeat perferendis eius animi vitae. Vero numquam, corrupti
+                doloribus nesciunt, sint repellat dolores temporibus et omnis
+                similique ipsam error.
               </p>
+              <div class="cont-mapa">
+                    <p>Mapa</p>
+              </div>
             </div>
           </article>
         </section>
-        <section class="sec-formulario-ev">
+        <section class="sec-formulario-cl">
           <h2>Regístrate</h2>
-          <form action="" class="formulario-ev">
+          <form action="" class="formulario-cl">
             <label for="nombre">Nombre</label>
             <input type="text" name="nombre" id="nombre" placeholder="Juan" />
 
