--- a/sponsors.html
+++ b/sponsors.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./estilos/estilo.css" />
-    <title>OWASP FOUNDATION</title>
+    <title>Sponsors</title>
   </head>
   <body>
-    <div class="cont-principal">
+    <div class="cont-sponsors">
       <header class="header">
         <img class="header-logo" src="./assets/owasp-logo.jpeg" alt="" />
         <nav class="header-menu">
@@ -19,32 +18,47 @@
           </ul>
         </nav>
       </header>
-      <main class="main-evento">
-        <section class="sec-evento">
+      <main class="main-sponsors">
+        <section class="sec-sponsors">
           <article>
-            <h2>Título del evento</h2>
-            <div class="cont-evento">
+            <h2>Sponsors</h2>
+            <div class="cont-sponsors">
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Architecto quasi odit odio earum, error dolore sit nobis. Qui
-              accusantium quae neque, dolorum labore quasi autem quidem
-              distinctio molestias laudantium quas numquam dignissimos ipsam?
-              Facilis, quos nam non, possimus distinctio obcaecati eligendi
-              nobis quibusdam eveniet modi fugiat ducimus dolores deleniti
-              maxime molestias impedit magnam quaerat tenetur voluptatem.
-              Soluta, nemo modi! Doloremque perspiciatis, itaque ut officiis
-              totam voluptatibus cum ipsa, ipsam dolorum atque consequuntur
-              minima velit fugit suscipit cupiditate dignissimos illum ea in
-              quibusdam odit? Tenetur dolores aperiam, voluptatibus deleniti
-              necessitatibus libero voluptates provident dolorum, sint laborum
-              id sit dignissimos quas ab.
+                Architecto quasi odit odio earum, error dolore sit nobis. Qui
+                accusantium quae neque, dolorum labore quasi autem quidem
+                distinctio molestias laudantium quas numquam dignissimos ipsam?
+                Facilis, quos nam non, possimus distinctio obcaecati eligendi
+                nobis quibusdam eveniet modi fugiat ducimus dolores deleniti
+                maxime molestias impedit magnam quaerat tenetur voluptatem.
               </p>
+
+              <div class="sp-platinum">
+                <h3>PLATINUM</h3>
+                <img src="https://picsum.photos/200" alt="">
+                <img src="https://picsum.photos/200" alt="">
+                <img src="https://picsum.photos/200" alt="">
+              </div>
+
+              <div class="sp-gold">
+                <h3>GOLD</h3>
+                <img src="https://picsum.photos/200" alt="">
+                <img src="https://picsum.photos/200" alt="">
+                <img src="https://picsum.photos/200" alt="">
+              </div>
+
+              <div class="sp-silver">
+                <h3>SILVER</h3>
+                <img src="https://picsum.photos/200" alt="">
+                <img src="https://picsum.photos/200" alt="">
+                <img src="https://picsum.photos/200" alt="">
+              </div>
             </div>
           </article>
         </section>
-        <section class="sec-formulario-ev">
+        <section class="sec-formulario-sp">
           <h2>Regístrate</h2>
-          <form action="" class="formulario-ev">
+          <form action="" class="formulario-sp">
             <label for="nombre">Nombre</label>
             <input type="text" name="nombre" id="nombre" placeholder="Juan" />
 
