Centrado de logo y nav

--- a/sponsors.html
+++ b/sponsors.html
@@ -3,21 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./estilos/estilo.css">
     <title>Sponsors</title>
   </head>
   <body>
     <div class="cont-sponsors">
-      <header class="header">
-        <img class="header-logo" src="./assets/owasp-logo.jpeg" alt="" />
-        <nav class="header-menu">
-          <ul>
-            <li>Inicio</li>
-            <li>Oradores</li>
-            <li>Cómo llegar</li>
-            <li>Sponsors</li>
-          </ul>
-        </nav>
-      </header>
+      <div class="cont-header">
+        <header class="header-logo">
+          <img src="./assets/owasp-logo.jpeg" alt="" />
+          <nav>
+            <ul>
+              <li><a href="./index.html">Inicio</a></li>
+              <li><a href="./oradores.html">Oradores</a></li>
+              <li><a href="./como-llegar.html">Cómo llegar</a></li>
+              <li><a href="./sponsors.html">Sponsors</a></li>
+            </ul>
+          </nav>
+        </header>
+      </div>
       <main class="main-sponsors">
         <section class="sec-sponsors">
           <article>
