--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
   </head>
   <body>
     <div class="cont-principal">
-      <header class="header">
-        <img class="header-logo" src="./assets/owasp-logo.jpeg" alt="" />
-        <nav class="header-menu">
+      <div class="cont-header">
+      <header class="header-logo">
+        <img src="./assets/owasp-logo.jpeg" alt="" />
+        <nav>
           <ul>
-            <li>Inicio</li>
-            <li>Oradores</li>
-            <li>Cómo llegar</li>
-            <li>Sponsors</li>
+            <li><a href="./index.html">Inicio</a></li>
+            <li><a href="./oradores.html">Oradores</a></li>
+            <li><a href="./como-llegar.html">Cómo llegar</a></li>
+            <li><a href="./sponsors.html">Sponsors</a></li>
           </ul>
         </nav>
       </header>
+    </div>
       <main class="main-evento">
         <section class="sec-evento">
           <article>
@@ -26,18 +28,18 @@
             <div class="cont-evento">
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Architecto quasi odit odio earum, error dolore sit nobis. Qui
-              accusantium quae neque, dolorum labore quasi autem quidem
-              distinctio molestias laudantium quas numquam dignissimos ipsam?
-              Facilis, quos nam non, possimus distinctio obcaecati eligendi
-              nobis quibusdam eveniet modi fugiat ducimus dolores deleniti
-              maxime molestias impedit magnam quaerat tenetur voluptatem.
-              Soluta, nemo modi! Doloremque perspiciatis, itaque ut officiis
-              totam voluptatibus cum ipsa, ipsam dolorum atque consequuntur
-              minima velit fugit suscipit cupiditate dignissimos illum ea in
-              quibusdam odit? Tenetur dolores aperiam, voluptatibus deleniti
-              necessitatibus libero voluptates provident dolorum, sint laborum
-              id sit dignissimos quas ab.
+                Architecto quasi odit odio earum, error dolore sit nobis. Qui
+                accusantium quae neque, dolorum labore quasi autem quidem
+                distinctio molestias laudantium quas numquam dignissimos ipsam?
+                Facilis, quos nam non, possimus distinctio obcaecati eligendi
+                nobis quibusdam eveniet modi fugiat ducimus dolores deleniti
+                maxime molestias impedit magnam quaerat tenetur voluptatem.
+                Soluta, nemo modi! Doloremque perspiciatis, itaque ut officiis
+                totam voluptatibus cum ipsa, ipsam dolorum atque consequuntur
+                minima velit fugit suscipit cupiditate dignissimos illum ea in
+                quibusdam odit? Tenetur dolores aperiam, voluptatibus deleniti
+                necessitatibus libero voluptates provident dolorum, sint laborum
+                id sit dignissimos quas ab.
               </p>
             </div>
           </article>
