Modificacion comollegar.html

--- a/como-llegar.html
+++ b/como-llegar.html
@@ -3,16 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./estilos/estilo.css">
+    <link rel="stylesheet" href="./estilos/estilo.css" />
     <title>Como llegar</title>
   </head>
   <body>
     <div class="cont-comollegar">
-
       <div class="cont-header">
         <header class="header-logo">
           <img src="./assets/owasp-logo.jpeg" alt="" />
-  
+
           <nav>
             <ul>
               <li><a href="./index.html">Inicio</a></li>
@@ -38,7 +37,7 @@
                 similique ipsam error.
               </p>
               <div class="cont-mapa">
-                    <p>Mapa</p>
+                <p>Mapa</p>
               </div>
             </div>
           </article>
