Landing renovada en curso

--- a/como-llegar.html
+++ b/como-llegar.html
@@ -1,87 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./estilos/estilo.css" />
-    <title>Como llegar</title>
-  </head>
-  <body>
-    <div class="cont-comollegar">
-      <div class="cont-header">
-        <header class="header-logo">
-          <img src="./assets/owasp-logo.jpeg" alt="" />
-
-          <nav>
-            <ul>
-              <li><a href="./index.html">Inicio</a></li>
-              <li><a href="./oradores.html">Oradores</a></li>
-              <li><a href="./como-llegar.html">Cómo llegar</a></li>
-              <li><a href="./sponsors.html">Sponsors</a></li>
-            </ul>
-          </nav>
-        </header>
-      </div>
-      <main class="main-comollegar">
-        <section class="sec-comollegar">
-          <article>
-            <h2>Cómo llegar</h2>
-            <div class="cont-comollegar">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
-                necessitatibus, facere, atque eum dignissimos consequatur magni,
-                reiciendis eveniet tempore porro perspiciatis voluptatem
-                obcaecati totam illum quia sapiente harum ullam numquam alias
-                placeat perferendis eius animi vitae. Vero numquam, corrupti
-                doloribus nesciunt, sint repellat dolores temporibus et omnis
-                similique ipsam error.
-              </p>
-              <div class="cont-mapa">
-                <p>Mapa</p>
-              </div>
-            </div>
-          </article>
-        </section>
-        <section class="sec-formulario-cl">
-          <h2>Regístrate</h2>
-          <form action="" class="formulario-cl">
-            <label for="nombre">Nombre</label>
-            <input type="text" name="nombre" id="nombre" placeholder="Juan" />
-
-            <label for="apellido">Apellido</label>
-            <input
-              type="text"
-              name="apellido"
-              id="apellido"
-              placeholder="Rodríguez"
-            />
-
-            <label for="email">Email</label>
-            <input
-              type="email"
-              name="email"
-              id="email"
-              placeholder="juanrodriguez@gmail.com"
-              required
-            />
-
-            <label for="telefono">Teléfono</label>
-            <input
-              type="number"
-              name="telefono"
-              id="telefono"
-              placeholder="4480707"
-            />
-
-            <button class="boton" type="submit">Enviar</button>
-          </form>
-        </section>
-      </main>
-
-      <footer class="footer">
-        <h4>OWASP</h4>
-        <p>Todos los derechos reservados - 2021</p>
-      </footer>
-    </div>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos/estilo.css">
+    <title>Cómo llegar</title>
+</head>
+<body>
+    
+</body>
 </html>
