--- a/sponsors.html
+++ b/sponsors.html
@@ -3,65 +3,67 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./estilos/estilo.css">
+    <link rel="stylesheet" href="estilos/estilo.css" />
     <title>Sponsors</title>
   </head>
   <body>
-    <div class="cont-sponsors">
-      <div class="cont-header">
-        <header class="header-logo">
-          <img src="./assets/owasp-logo.jpeg" alt="" />
-          <nav>
-            <ul>
-              <li><a href="./index.html">Inicio</a></li>
-              <li><a href="./oradores.html">Oradores</a></li>
-              <li><a href="./como-llegar.html">Cómo llegar</a></li>
-              <li><a href="./sponsors.html">Sponsors</a></li>
-            </ul>
-          </nav>
-        </header>
+    <div class="contenedor">
+      <div class="header"></div>
+      <div class="navegacion">
+        <nav>
+          <ul>
+            <li><a class="active" href="./index.html">Inicio</a></li>
+            <li><a href="./oradores.html">Oradores</a></li>
+            <li><a href="./como-llegar.html">Cómo llegar</a></li>
+            <li><a href="./sponsors.html">Sponsors</a></li>
+          </ul>
+        </nav>
       </div>
-      <main class="main-sponsors">
-        <section class="sec-sponsors">
-          <article>
-            <h2>Sponsors</h2>
-            <div class="cont-sponsors">
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Architecto quasi odit odio earum, error dolore sit nobis. Qui
-                accusantium quae neque, dolorum labore quasi autem quidem
-                distinctio molestias laudantium quas numquam dignissimos ipsam?
-                Facilis, quos nam non, possimus distinctio obcaecati eligendi
-                nobis quibusdam eveniet modi fugiat ducimus dolores deleniti
-                maxime molestias impedit magnam quaerat tenetur voluptatem.
-              </p>
+      <div class="contenido">
+        <div class="seccion">
+          <article class="articulo">
+            <h1>Sponsors</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
+              sapiente laudantium tempora, magnam expedita rerum? Officiis
+              expedita dolor ad facilis!
+            </p>
 
-              <div class="sp-platinum">
-                <h3>PLATINUM</h3>
-                <img src="https://picsum.photos/200" alt="">
-                <img src="https://picsum.photos/200" alt="">
-                <img src="https://picsum.photos/200" alt="">
-              </div>
+            <div class="sponsor">
+                <h2>PLATINUM</h2>
+              <div class="sp1"></div>
 
-              <div class="sp-gold">
-                <h3>GOLD</h3>
-                <img src="https://picsum.photos/200" alt="">
-                <img src="https://picsum.photos/200" alt="">
-                <img src="https://picsum.photos/200" alt="">
-              </div>
+              <div class="sp2"></div>
 
-              <div class="sp-silver">
-                <h3>SILVER</h3>
-                <img src="https://picsum.photos/200" alt="">
-                <img src="https://picsum.photos/200" alt="">
-                <img src="https://picsum.photos/200" alt="">
-              </div>
+              <div class="sp3"></div>
             </div>
+
+            <div class="sponsor">
+                <h2>GOLD</h2>
+              <div class="sp1"></div>
+
+              <div class="sp2"></div>
+
+              <div class="sp3"></div>
+            </div>
+
+            <div class="sponsor">
+                <h2>SYLVER</h2>
+              <div class="sp1"></div>
+
+              <div class="sp2"></div>
+
+              <div class="sp3"></div>
+            </div>
+
+
+
+            
           </article>
-        </section>
-        <section class="sec-formulario-sp">
+        </div>
+        <div class="aside">
           <h2>Regístrate</h2>
-          <form action="" class="formulario-sp">
+          <form action="">
             <label for="nombre">Nombre</label>
             <input type="text" name="nombre" id="nombre" placeholder="Juan" />
 
@@ -92,13 +94,12 @@
 
             <button class="boton" type="submit">Enviar</button>
           </form>
-        </section>
-      </main>
-
-      <footer class="footer">
-        <h4>OWASP</h4>
-        <p>Todos los derechos reservados - 2021</p>
-      </footer>
+        </div>
+      </div>
+      <div class="footer">
+        <p id="derechos">Todos los derechos reservados</p>
+        <p id="autor">Percy 2021</p>
+      </div>
     </div>
   </body>
 </html>
