--- a/oradores.html
+++ b/oradores.html
@@ -24,7 +24,7 @@
           <article class="articulo">
             <h1>Oradores</h1>
             <!--orador 1-->
-            <div class="foto">
+            <div class="orador">
               <img
                 src="https://i.picsum.photos/id/237/200/300.jpg?hmac=TmmQSbShHz9CdQm0NkEjx1Dyh_Y984R9LpNrpvH2D_U"
                 alt=""
@@ -46,7 +46,7 @@
             
 
             <!--orador 2-->
-            <div class="foto">
+            <div class="orador">
                 <img
                   src="https://i.picsum.photos/id/237/200/300.jpg?hmac=TmmQSbShHz9CdQm0NkEjx1Dyh_Y984R9LpNrpvH2D_U"
                   alt=""
