--- a/oradores.html
+++ b/oradores.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <div class="contenedor">
-      <div class="header"></div>
+      <div class="header">
+        <img src="./assets/owasp.png" alt="">
+      </div>
       <div class="navegacion">
         <nav>
           <ul>
